tests/specs/ecosystem/std/expect/0_218_2.test
std/expect/0.218.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[unsupported-expando-property]: expando property referencing 'anything' conflicts with 'expect.anything'
   --> /expect.ts:172:19
    | 
172 | expect.anything = anything;
    |                   ^^^^^^^^
    = hint: rename 'anything' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'any' conflicts with 'expect.any'
   --> /expect.ts:173:14
    | 
173 | expect.any = any;
    |              ^^^
    = hint: rename 'any' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'arrayContaining' conflicts with 'expect.arrayContaining'
   --> /expect.ts:174:26
    | 
174 | expect.arrayContaining = arrayContaining;
    |                          ^^^^^^^^^^^^^^^
    = hint: rename 'arrayContaining' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


